--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-hr": "^1.1.4",
     "react-native-radio-buttons-group": "^2.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
